--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
   <div id="root"></div>
-  <script src="js/app.js" type="module" ></script>
+  <script src="dist/js/app.js" type="module" ></script>
 </body>
 
 </html>
