--- a/index.html
+++ b/index.html
@@ -5,16 +5,15 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Tic Tac App</title>
-  <link rel="stylesheet" href="css/style.css">
   <meta name="description" content="TicTacApp">
   <link rel="icon" href="/favicon.ico" sizes="any">
   <link rel="icon" href="/icon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="icon.png">
   <meta name="theme-color" content="#fafafa">
+  <link rel="stylesheet" href="css/tailwind-style.css">
 </head>
-<body>
+<body data-theme="dark" >
   <div id="root"></div>
   <script src="dist/js/app.js" type="module" ></script>
 </body>
 </html>
-https://github.com/jaiminmoslake7020/tictac-closure-app/actions/runs/11962151858/artifacts/2221354125
