--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Tic Tac App</title>
   <meta name="description" content="TicTacApp">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" />
   <link rel="icon" href="./assets/favicon.ico" sizes="any">
   <link rel="icon" href="./assets/icon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="./assets/icon.png">
   <meta name="theme-color" content="#fafafa">
 </head>
 <body data-theme="dark">
-<div id="root"></div>
+<div id="root">
+</div>
 </body>
 </html>
